feat: nav styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,7 @@
   --color-grey-primary: #E7E5DE;
   --color-grey-secondary: #D1CFC9;
   --color-soft-black: #1E1E1E;
+  --color-orange: #ED9159;
 
   --spacing-md: 1rem;
 
