--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,8 +14,7 @@
   --color-grey-primary: #E7E5DE;
   --color-grey-secondary: #D1CFC9;
   --color-soft-black: #1E1E1E;
-  --color-amerga-organge: #E57634;
-  --color-orange: #ED9159;
+  --color-amerga-orange: #E57634;
 
   --spacing-md: 1rem;
   --spacing-container: 1280px;
