--- a/src/slices/HeroMosaicImages/styles.module.css
+++ b/src/slices/HeroMosaicImages/styles.module.css
@@ -13,21 +13,21 @@
 .gridTopRight {
   grid-column: span 4 / span 4;
   grid-row: span 6 / span 6;
-  grid-column-start: 8;
+  grid-column-start: 7; /* 8 */
   grid-row-start: 2;
 }
 
 .gridBottomRight {
   grid-column: span 5 / span 5;
   grid-row: span 5 / span 5;
-  grid-column-start: 8;
+  grid-column-start: 7; /* 8 */
   grid-row-start: 8;
 }
 
 .gridCentered {
   grid-column: span 5 / span 5;
   grid-row: span 5 / span 5;
-  grid-column-start: 3;
+  grid-column-start: 2; /* 3 */
   grid-row-start: 5;
 }
 
