--- a/src/slices/HeroMosaicImages/slider.module.css
+++ b/src/slices/HeroMosaicImages/slider.module.css
@@ -24,3 +24,14 @@
   height: 100%;
   display: block;
 }
+.embla__slide::before {
+  content: '';
+  display: block;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
